# devops-final-task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
kustomize/base/: deployment.yml  kustomization.yml  postgres-deployment.yml  postgres-service.yml  secret.yml  service.yml
kustomize/overlays/common/: certificate.yml  ingress.yml  kustomization.yml  namespace.yml
sampleapp/: tests.py  views.py
sampleapp/templates/: base.html  index.html
sampleproject/: settings.py  urls.py  wsgi.py
