[tool.poetry]
name = "sample-app"
version = "0.1.0"
description = "sample django app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
dj-database-url = "^2.0.0"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
